# big-data-6-sem

./: .gitignore  5-БыченковА.К.-статья РТУ МИРЭА.docx  7-БыченковА.К.-статья РТУ МИРЭА ИТ-стандарт.docx  Задание.txt  заметки.docx  план.txt  статья  ИТ-стандарт.docx
csv_converter/: __init__.py  pyproject.toml  students.parquet
datasets/: arrow_converter.py  components.py  flight.ipynb  iceberg.ipynb  main.ipynb  main.py  pyproject.toml  spark.ipynb  trino.ipynb
datasets-generation/: components.py  config.json  main.ipynb  main.py  pyproject.toml
datasets-generation/attendance/example/1/ИКБО-32-21/: Разработка клиент-серверных приложений.csv
datasets-generation/groups/: __init__.py  groups.csv
datasets-generation/students/: __init__.py  students.csv
datasets/attendance/: __init__.py  attendance.pkl  attendance_examples.csv  attendance_patterns.json
datasets/attendance/example/1/ИКБО-32-21/: Моделирование сред и разработка приложений виртуальной и дополненной реальности.csv
datasets/config/: __init__.py  config.json
datasets/delta_table/: 1-ac26eb0b-b565-406b-9672-4e01bff7c467-0.parquet
datasets/groups/: __init__.py  groups.feather  groups.parquet
datasets/hudi_catalog/.hoodie/: .hoodie.properties.crc  hoodie.properties
datasets/iceberg_catalog/: pyiceberg_catalog.sqlite
datasets/iceberg_catalog/default.db/students/data/: 00000-0-fe6d4724-0f7c-4a30-adca-f069870d5207.parquet
datasets/iceberg_catalog/default.db/students/metadata/: 00000-12f4d17f-1cd5-4fe3-82d8-cd580d7bb84c.metadata.json  00001-78627fb9-4c00-4110-b96d-464b03ea7bfe.metadata.json  4e0cd4c6-5f0d-4cfa-b42d-f462d6872c81-m0.avro  snap-830386119738322715-0-4e0cd4c6-5f0d-4cfa-b42d-f462d6872c81.avro
datasets/marks/: Моделирование сред и разработка приложений виртуальной и дополненной реальности.csv
datasets/marks/1/ИКБО-32-21/: Моделирование сред и разработка приложений виртуальной и дополненной реальности.csv
datasets/students/: __init__.py
datasets/subjects/: subjects.csv
deployment/: README.md  compose.yaml
deployment/airbyte/: airbyte.md  airbyte.sh
docs/: План.canvas  Статья.md  Табличный формат хранения Iceberg для озёр данных.md
power_bi/: main.pbix
(+22 files in other folders)
