[tool.poetry]
name = "datasets-generation"
version = "0.1.0"
description = ""
authors = ["Deverty <bychenkov.a.k@edu.mirea.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
streamlit = "^1.33.0"
pydantic = "^2.6.4"
faker = "^24.7.1"
pyarrow = "^15.0.2"
pyiceberg = "^0.6.0"
sqlalchemy = "^2.0.29"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.25.0"
pandas-stubs = "^2.2.1.240316"
ipykernel = "^6.29.4"
pyarrow-stubs = "^10.0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
run = "streamlit run main.py"
